; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/siano/extr_smscoreapi.c_smscore_sendrequest_and_wait.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/siano/extr_smscoreapi.c_smscore_sendrequest_and_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smscore_device_t = type { i32 (i32, i8*, i64)*, i32 }
%struct.completion = type { i32 }

@.str = private unnamed_addr constant [30 x i8] c"sendrequest returned error %d\00", align 1
@SMS_PROTOCOL_MAX_RAOUNDTRIP_MS = common dso_local global i32 0, align 4
@ETIME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.smscore_device_t*, i8*, i64, %struct.completion*)* @smscore_sendrequest_and_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smscore_sendrequest_and_wait(%struct.smscore_device_t* %0, i8* %1, i64 %2, %struct.completion* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.smscore_device_t*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.completion*, align 8
  %10 = alloca i32, align 4
  store %struct.smscore_device_t* %0, %struct.smscore_device_t** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store %struct.completion* %3, %struct.completion** %9, align 8
  %11 = load %struct.smscore_device_t*, %struct.smscore_device_t** %6, align 8
  %12 = getelementptr inbounds %struct.smscore_device_t, %struct.smscore_device_t* %11, i32 0, i32 0
  %13 = load i32 (i32, i8*, i64)*, i32 (i32, i8*, i64)** %12, align 8
  %14 = load %struct.smscore_device_t*, %struct.smscore_device_t** %6, align 8
  %15 = getelementptr inbounds %struct.smscore_device_t, %struct.smscore_device_t* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = load i64, i64* %8, align 8
  %19 = call i32 %13(i32 %16, i8* %17, i64 %18)
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %10, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %4
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @sms_info(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %23)
  %25 = load i32, i32* %10, align 4
  store i32 %25, i32* %5, align 4
  br label %38

26:                                               ; preds = %4
  %27 = load %struct.completion*, %struct.completion** %9, align 8
  %28 = load i32, i32* @SMS_PROTOCOL_MAX_RAOUNDTRIP_MS, align 4
  %29 = call i32 @msecs_to_jiffies(i32 %28)
  %30 = call i64 @wait_for_completion_timeout(%struct.completion* %27, i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %26
  br label %36

33:                                               ; preds = %26
  %34 = load i32, i32* @ETIME, align 4
  %35 = sub nsw i32 0, %34
  br label %36

36:                                               ; preds = %33, %32
  %37 = phi i32 [ 0, %32 ], [ %35, %33 ]
  store i32 %37, i32* %5, align 4
  br label %38

38:                                               ; preds = %36, %22
  %39 = load i32, i32* %5, align 4
  ret i32 %39
}

declare dso_local i32 @sms_info(i8*, i32) #1

declare dso_local i64 @wait_for_completion_timeout(%struct.completion*, i32) #1

declare dso_local i32 @msecs_to_jiffies(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
